--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Brotli @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_f7i0oxypt6/croot/brotli-split_1736182464088/work
 certifi==2023.7.22
 charset-normalizer==3.3.2
 contourpy==1.0.7
@@ -6,16 +7,17 @@ filelock==3.13.1
 fonttools==4.39.4
 fsspec==2023.10.0
 idna==3.4
+importlib_resources==6.5.2
 Jinja2==3.1.2
 joblib==1.2.0
 kiwisolver==1.4.4
-llvmlite==0.40.0
+llvmlite==0.40.1
 MarkupSafe==2.1.3
 matplotlib==3.7.1
 mpmath==1.3.0
 networkx==3.2.1
 numba==0.57.0
-numpy==1.26.1
+numpy==1.24.3
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
@@ -26,11 +28,13 @@ requests==2.31.0
 scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
-sympy==1.12
+sympy==1.13.1
 threadpoolctl==3.1.0
-torch==2.0.0+cu118
-torchaudio==2.0.1+cu118
-torchvision==0.15.1+cu118
-typing_extensions==4.8.0
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+typing_extensions==4.12.2
 tzdata==2023.3
+unicodedata2 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b99hn8t9lq/croot/unicodedata2_1736541774279/work
 urllib3==2.0.7
+zipp==3.21.0
